# tokencount

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  README.md  build.rs  flake.nix  index.html  package-lock.json  package.json  playwright.bundle.config.js  playwright.config.js
.github/workflows/: ci.yml  deploy.yml  e2e.yml  offline-bundle.yml  preview.yml
cli/: tokencount.mjs
cli/lib/: tokenizer.mjs
css/: style.css
data/: claude-vocab.json
js/: app.js  claude-tokenizer.js  diff.js  tokenizer.js  zbase32.js
pr-preview/pr-2/: .gitignore  CLAUDE.md  Cargo.toml  flake.nix  playwright.config.js
pr-preview/pr-2/css/: style.css
pr-preview/pr-2/data/: claude-vocab.json
pr-preview/pr-2/js/: tokenizer.js
pr-preview/pr-2/src/: claude.rs  main.rs  tiktoken.rs
scripts/: build-cli.mjs  build-offline.mjs  build-screenshot-viewer.mjs
src/: bpe.rs  byte_level.rs  claude.rs  frozen.rs  main.rs
tests/: cli.test.mjs  workflows.spec.js
