[package]
name = "tokencount"
version = "0.99.0"
edition = "2021"
description = "Lightning-fast offline token counter for 9 LLM tokenizers"

[dependencies]
serde_json = "1"
fancy-regex = "0.14"
base64 = "0.22"
unicode-normalization = "0.1"
rayon = "1"

[build-dependencies]
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
